:recycle: Refactor: RecommendationService